corrected translate in json-s

--- a/src/main/resources/public/locales/en/common.json
+++ b/src/main/resources/public/locales/en/common.json
@@ -1,17 +1,15 @@
 {
-        "login": "Login_App",
-        "logout": "Logout_App",
-        "username": "User Name_App",
-        "password": "Password_App",
-        "developer": "Developer_App",
-        "app": "App_App",
-        "metadata": "Metadata_App",
-        "name": "Name_App",
-        "type": "Type_App",
-        "uri": "URI_App",
-        "data": "Data_App",
-        "dataSearch": "Data Search_App",
-        "jsonSearch": "Json Search_App",
-        "regularExpression": "Regular expression_App",
-        "query": "Query_App"
+        "login": "Login",
+        "logout": "Logout",
+        "username": "User Name",
+        "password": "Password",
+        "developer": "Developer",
+        "app": "App",
+        "language": "Language",
+        "metadata": "Metadata",
+        "name": "Name",
+        "data": "Data",
+        "regularExpression": "Regular expression",
+        "query": "Query",
+        "run": "Run"
 }
