--- a/src/main/resources/public/locales/ru/common.json
+++ b/src/main/resources/public/locales/ru/common.json
@@ -5,13 +5,11 @@
         "password": "Пароль_App",
         "developer": "Разработчик_App",
         "app": "Приложение_App",
+        "language": "Язык_App",
         "metadata": "Метаданные_App",
         "name": "Наименование_App",
-        "type": "Type_App",
-        "uri": "URI_App",
         "data": "Данные_App",
-        "dataSearch": "Поиск по классу_App",
-        "jsonSearch": "Поиск по Json объекту_App",
         "regularExpression": "Регулярное выражение_App",
-        "query": "Запрос_App"
+        "query": "Запрос_App",
+        "run": "Старт_App"
 }
