corrected json-s with langs

--- a/src/main/resources/public/locales/ch/common.json
+++ b/src/main/resources/public/locales/ch/common.json
@@ -4,12 +4,11 @@
         "username": "用戶名",
         "password": "密碼",
         "developer": "開發人員",
-        "app": "應用",
         "language": "語言",
         "metadata": "元數據",
-        "name": "名稱",
         "data": "數據",
-        "regularExpression": "正則表達式",
         "query": "詢問",
-        "run": "跑"
+        "run": "跑",
+        "notfound": "未找到",
+        "regularexpression": "正則表達式"
 }
