--- a/src/main/resources/public/locales/ru/common.json
+++ b/src/main/resources/public/locales/ru/common.json
@@ -1,14 +1,19 @@
 {
-        "login": "Войти_App",
-        "logout": "Выход_App",
-        "username": "Имя пользователя_App",
-        "password": "Пароль_App",
-        "developer": "Разработчик_App",
-        "language": "Язык_App",
-        "metadata": "Метаданные_App",
-        "data": "Данные_App",
-        "query": "Запрос_App",
-        "run": "Старт_App",
-        "notfound": "Не найдено_App",
-        "regularexpression": "Регулярное выражение_App"
+        "login": "Войти",
+        "logout": "Выход",
+        "username": "Имя пользователя",
+        "password": "Пароль",
+        "developer": "Разработчик",
+        "language": "Язык",
+        "metadata": "Метаданные",
+        "data": "Данные",
+        "query": "Запрос",
+        "run": "Старт",
+        "notfound": "Не найдено",
+        "regularexpression": "Регулярное выражение",
+        "search": "Поиск: ",
+        "action": "Действия",
+        "edit": "Редактировать",
+        "delete": "Удалить",
+        "addresource": "Добавить ресурсы"
 }
