--- a/src/main/resources/public/locales/ru/common.json
+++ b/src/main/resources/public/locales/ru/common.json
@@ -15,5 +15,6 @@
         "action": "Действия",
         "edit": "Редактировать",
         "delete": "Удалить",
-        "addresource": "Добавить ресурсы"
+        "addresource": "Добавить ресурсы",
+        "dynamiccomponent": " компонента не может быть загружена из "
 }
