--- a/src/main/resources/public/locales/en/common.json
+++ b/src/main/resources/public/locales/en/common.json
@@ -15,5 +15,7 @@
         "action": "Action",
         "edit": "Edit",
         "delete": "Delete",
-        "addresource": "Add resource"
+        "addresource": "Add resource",
+        "dynamiccomponent": " component cannot be downloaded from path "
+
 }
